Fix ClassCastException Integer->Long, cast long input to int